--- a/typescript-files/tsconfig.json
+++ b/typescript-files/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
-    "module": "CommonJS", // https://github.com/wclr/ts-node-dev/issues/265
+    "module": "CommonJS",
+    // https://github.com/wclr/ts-node-dev/issues/265
     "target": "es2020",
     "sourceMap": true,
     "esModuleInterop": true,
     "moduleResolution": "Node",
-    "strict":true
+    "strict": true
   },
   "exclude": [
     "node_modules"
